# ING-Zadanie-Rekrutacyjne-Micha-Piaskowski

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  dashboard.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
portfolio_sim/: __init__.py  __main__.py  allocation.py  audit.py  metrics.py  nbp_client.py  portfolio.py  report.py  visualizer.py
tests/: conftest.py  test_allocation.py  test_audit.py  test_cli.py  test_metrics.py  test_nbp_client.py  test_portfolio.py  test_report.py  test_visualizer.py
